# titanico

./: .env.example  Cargo.toml  README.md
src/: main.rs
src/proto/: mongo.proto
