[package]
name = "titanico"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
mongodb = { version = "2.8.2", features = ["tokio-runtime"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tonic = { version = "0.11.0", features = ["transport"] }
